<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:gravity="center_horizontal"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textProvider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/textLabelProvider"
        android:layout_toEndOf="@id/textLabelProvider"
        android:paddingStart="5dp"
        android:text="@string/dummy" />

    <TextView
        android:id="@+id/textLabelProvider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/textLabelLongitude"
        android:text="@string/provider" />

    <TextView
        android:id="@+id/textLatitude"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/textLabelLatitude"
        android:layout_toEndOf="@id/textLabelLatitude"
        android:paddingStart="5dp"
        android:text="@string/dummy" />

    <TextView
        android:id="@+id/textLabelLatitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textLabelProvider"
        android:layout_alignEnd="@id/textLabelLongitude"
        android:text="@string/latitude" />

    <TextView
        android:id="@+id/textLongitude"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/textLabelLongitude"
        android:layout_toEndOf="@id/textLabelLongitude"
        android:paddingStart="5dp"
        android:text="@string/dummy" />

    <TextView
        android:id="@+id/textLabelLongitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textLabelLatitude"
        android:text="@string/longitude" />

    <Spinner
        android:id="@+id/spinnerTransportation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textLongitude"
        android:layout_alignEnd="@id/textLongitude" />

    <TextView
        android:id="@+id/textTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinnerTransportation"
        android:layout_alignStart="@id/textLabelLongitude"
        android:layout_alignEnd="@id/textLongitude"
        android:gravity="center_horizontal"
        android:paddingTop="20dp"
        android:text="@string/dummy"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textTo"
        android:layout_alignStart="@id/textLabelLongitude"
        android:layout_alignEnd="@id/textLongitude"
        android:gravity="center_horizontal"
        android:paddingBottom="20dp"
        android:text="@string/dummy" />

    <TextView
        android:id="@+id/textNewLocLoabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textDistance"
        android:layout_alignStart="@id/textLabelLongitude"
        android:layout_alignEnd="@id/textLongitude"
        android:gravity="center_horizontal"
        android:text="@string/newlocation"
        android:textSize="15sp"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/editLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textNewLocLoabel"
        android:layout_alignStart="@id/textLabelLongitude"
        android:layout_alignEnd="@id/textLongitude"
        android:autofillHints=""
        android:inputType="textPostalAddress" />

    <Button
        android:id="@+id/buttonRoute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editLocation"
        android:layout_toLeftOf="@id/buttonNewLoc"
        android:onClick="onRoute"
        android:text="@string/route" />

    <Button
        android:id="@+id/buttonNewLoc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editLocation"
        android:layout_alignEnd="@id/editLocation"
        android:onClick="onNew"
        android:text="@string/newButton" />

    <Button
        android:id="@+id/buttonFavorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonNewLoc"
        android:layout_alignRight="@id/buttonNewLoc"
        android:onClick="onFavorite"
        android:text="@string/setAsFavorite" />

</RelativeLayout>